# anthy-cmake

./: .gitignore  .gitmodules  AnthyConfig.cmake.in  CMakeLists.txt  README.md  anthy-unicode.pc.in  build-android.sh  config.h.in
